k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chemops
  labels:
    app.kubernetes.io/part-of: chemops
